src/test/resources/shell/shellSyntaxErr/variables/badintAssignments.wacc
# bad integer assignments - multiple syntax errors

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

  int x = 22 0 ;
  int y = 1A4
